--- a/main.tex
+++ b/main.tex
@@ -11,7 +11,7 @@
 \usepackage{xcolor}
 \usepackage{listings} 
 
-
+\usepackage{amsfonts}
 
 \bachelor{Разработка и реализация языка описания сценариев тестирования автомобильных систем}{09.03.01 <<Информатика и вычислительная техника>>}{09.03.01\_06 <<Распределенные информационные системы>>}{43504/6}{А. А. Спасеева}{д.т.н., проф.}{ А. В. Самочадин}
 
@@ -68,7 +68,8 @@ DSL& Domain-specific language\\
 AUTOSAR&Automotive Open System Architecture\\
 БНФ&Форма Бэкуса-Наура\\
 РБНФ&Расширенная форма Бэкуса-Наура\\
-AST& Abstract syntax tree
+AST& Abstract syntax tree\\
+АС&Автомобильные системы
 \end{tabular}
 
 %------------------------ВВЕДЕНИЕ-----------------------------
@@ -145,8 +146,17 @@ Unified Diagnostic Service (UDS) - автомобильный протокол, который позволяет диа
  \end{itemize}
  
  
-Одно и то же оборудование, разрабатываемое для разных автомобильных компаний с различной внутренней архитертурой программного обеспечения при тестироввании ПО может рассматриваться в качестве «черного ящика». Данное понятие предложил У.Р. Эшби в своей книге `` Введение в кибернетику''. Под черным ящиком подразумевается объект исследования, внутреннее устройство которого неизвестно. В электро-вычислительных системах оно помогает изучать поведение систем, абстрагируясь от их внутреннего устройства. Такое тестирование называется поведенческим. В этом случае проверяется функциональное поведение объекта с точки зрения внешнего мира. Под этой стратегией понимается создание тестов для тестового набора, основанных на технических требованиях и их спецификациях. Фактически, при поведенческом тестировании известно какой результат должен быть при определенном наборе данных, которые подаются на вход. Проанализировав требования и спецификации тестировщик может легко определить набор тестовых сценариев для проверки различной функциональности тестируемой системы. Принимая тестируемую систему в качестве черного ящика ее можно исследовать, манипулируя входными данными и данными, полученными на выходе.  
+Одно и то же оборудование, разрабатываемое для разных автомобильных компаний с различной внутренней архитертурой программного обеспечения при тестироввании ПО может рассматриваться в качестве «черного ящика». Данное понятие предложил У.Р. Эшби в своей книге `` Введение в кибернетику''. Под черным ящиком подразумевается объект исследования, внутреннее устройство которого неизвестно. В электро-вычислительных системах оно помогает изучать поведение систем, абстрагируясь от их внутреннего устройства. Такое тестирование называется поведенческим. В этом случае проверяется функциональное поведение объекта с точки зрения внешнего мира. Под этой стратегией понимается создание тестов для тестового набора, основанных на технических требованиях и их спецификациях. Фактически, при поведенческом тестировании известно какой результат должен быть при определенном наборе данных, которые подаются на вход. Проанализировав требования и спецификации тестировщик может легко определить набор тестовых сценариев для проверки различной функциональности тестируемой системы. Принимая тестируемую систему в качестве черного ящика ее можно исследовать, манипулируя входными данными и данными, полученными на выходе. Чтобы лучше понять, как исследуется оведение ``черного ящика'', предположим что имеется некоторая система управления, внутреннее устройство которой неизвестно для пользователя. Эта система управления имеет входы $X(x_1, x_2, ..., x_n)$ и выходы $Y(y_1, y_2, ..., y_n)$. Способ исследования поведения данной системы заключается в том, что выходы системы зависят от входов системы и времени $t_k, k \in \mathbb{Z}$. При этом величины времени выбираются произвольно (рис. \ref{fblackbox}) .
+%\\
+%\\
+%$y_1(t), y_2(t), ..., y_n(t)$ 
+%\\
+%\\
 
+\begin{Figure}{Исследование поведения ``черного ящика''}{fblackbox}
+{\includegraphics[width=\linewidth]{res/blackBox}}
+\label{fig:image}
+\end{Figure}
  
 
 В марте 2006 года Dan North предложил BDD методологию (behaviour-driven development), основанную на agile  методологиях. BDD является своего рода расширением техники разработки программного обеспечения через тестирование (test-driven development, TDD). Идея BDD подхода была в том, что в процессе написания требования для разрабатываемого ПО аналитики должны описать тестовые сценарии таким образом, чтобы их смог понять и разработчик, и тестировщик, и заказчик. При этом тестовые сценарии состоят из набора заранее обговоренных предложений. 
@@ -225,33 +235,35 @@ CAPL - процедурный язык, на котором выполнение блоков программы управляются собы
 С помощью CAPL можно описать тесты, полностью покрывающие функциональные требования АС. Однако данный язык является Си подобным, достаточно трудным для понимания менеджерами и аналитиками.
 
 
+\begin{Figure}[h]{Тестовая спецификация CAPL}{fcapl}
+{\includegraphics[width=\linewidth]{res/Capl}}
+\label{fig:image}
+\end{Figure}
+
 
 \item CCDL
-  
-Еще одним языком для описания тестовых спецификаций в автомобильной сфере является CCDL. Это язык тестовых спецификаций для тестирования, основанном на требованиях. Предоставляет высокоуровневый язык тестирования. CCDL может использоваться для автоматизированного black box тестирования. Однако, спецификации содержат в себе программный код, непонятный для части бизнес участников. 
+ 
+Еще одним языком для описания тестовых спецификаций в автомобильной сфере является CCDL. Это язык тестовых спецификаций для тестирования, основанном на требованиях. Предоставляет высокоуровневый язык тестирования. CCDL может использоваться для автоматизированного black box тестирования. Однако, спецификации содержат в себе программный код, непонятный для части бизнес участников (рис. \ref{fccdl}). 
 
-\begin{figure}[h]
-\center{\includegraphics[width=\linewidth]{res/CAPL-EX}}
-\caption{Тестовый сценарий на языке CCDL}
+ \begin{Figure}[h]{Тестовый сценарий на языке CCDL}{fccdl}
+{\includegraphics[width=\linewidth]{res/CAPL-EX}}
 \label{fig:image}
-\end{figure}
-
+\end{Figure}
 
 \item Cucumber
 
-Cucumber – это фреймворк, реализующий подход BDD. В Cucumber для разработки тестов используется Gherkin-нотация. Она определяет набор ключевых слов и структуру теста. Программная реализация шагов отделена от теста, что очень удобно для бизнеса. Однако для создания полной domain specific модели АС необходимо каждый раз заново реализовывать протокол коммуникации с тестовым оборудованием. 
-
-\begin{figure}[h]
-\center{\includegraphics[width=\linewidth]{res/CUCUMBER-EX-1}}
-\caption{Тестовая спецификация Cucumber}
+\begin{Figure}[h]{Тестовая спецификация Cucumber}{fcucumber1}
+{\includegraphics[width=\linewidth]{res/CUCUMBER-EX-1}}
 \label{fig:image}
-\end{figure}
+\end{Figure}
 
-\begin{figure}[h]
-\center{\includegraphics[width=\linewidth]{res/CUCUMBER-EX-2}}
-\caption{Реализация шага Cucumber}
+Cucumber – это фреймворк, реализующий подход BDD. В Cucumber для разработки тестов используется Gherkin-нотация. Она определяет набор ключевых слов и структуру теста. Пример тестого сценария, написаного с помощью Cucumber приведена на рис. \ref{fcucumber1} Программная реализация шагов отделена от теста (рис. \ref{fcucumber2}), что очень удобно для бизнеса. Однако для создания полной domain specific модели АС необходимо каждый раз заново реализовывать протокол коммуникации с тестовым оборудованием. 
+
+
+\begin{Figure}[h!]{Реализация шага Cucumber}{fcucumber2}
+{\includegraphics[width=\linewidth]{res/CUCUMBER-EX-2}}
 \label{fig:image}
-\end{figure}
+\end{Figure}
 
 
 \end{itemize}
@@ -304,6 +316,12 @@ Cucumber – это фреймворк, реализующий подход BDD. В Cucumber для разработки тест
 
 Данный способ тестирования подразумевает валидацию требований, предоставленных аналитиками и инженерами, которые составляют требования. Например, если в требовании описано, что сеть должна переходить в активный режим при получении любого кадра, то в качестве входных данных формируется любой корректный в данной сети кадр.
 \end{itemize}
+
+
+\subsection {Симуляция работы сетей}
+
+рассказать о шине CAN в промышленной автоматизации, eternet, fleaxray? немного о их пакетах и что нужно для тестирования? 
+
 
 Основываясь на вышесказанном разрабатываемый язык должен предоставлять пользователям возможность получения передачи данных на сетевом уровне модели ISO по протоколам CAN, FlexRay, LIN и Ethernet.
 
@@ -434,10 +452,6 @@ S – начальный символ грамматики.
 
 Механизм рефлексии позволяет обрабатывать типы, отсутствующие при компиляции, но появившиеся во время выполнения программы. Возможность использования рефлексии реализована в Java с помощью Reflection API.  
 
-\subsection {Симуляция работы сетей}
-
-рассказать о шине CAN в промышленной автоматизации, eternet, fleaxray? немного о их пакетах и что нужно для тестирования? 
-
 
 % ------------------------------------------------ГЛАВА Реализационная часть
 \chapter{Реализационная часть}
@@ -457,7 +471,7 @@ ANTLR4 удобен для работы с AST, является свободным программным обеспечением, пре
 
 %-------------------------------------ЛЕКСЕР
 \section{Лексер}
-DSL для описания тестовых сценариев автомобильных систем должен иметь следующие характерные инструкции (предложения):
+Предметно-ориентированный язык для описания тестовых сценариев автомобильных систем должен  должен позволять описывать следующие виды инструкций, необходимых для описания входных и выходных данных:
 \begin{itemize}
 \itemОтправить фрейм, сигнал или набор данных по UDS протоколу на тестируемое ПО
 \itemПолучить фрейм, сигнал или набор данных по UDS протоколу от тестируемого ПО
@@ -468,12 +482,24 @@ DSL для описания тестовых сценариев автомобильных систем должен иметь следующие 
 \itemПроверить полученное значение сигнала
 \end{itemize}
 
-При этом набор иструкций команды, состоящие из аналитиков, тестировщиков и разработчиков должны определять сами, так как процессе разработки автомобильного ПО могут выявляться свойства, специфичные для того или иного программного продукта. У пользователей должна быть позможность описать сценарии с иcпользованием специфичных терминов (рычаги у рулевой колонки, расстояние у лидара и т.д).
- Предполагается, что пользователи сами определяют ограниченный набор шагов, необходимых для описания тестовых сценариев, а тестировщиик набор шагов для каждой инструкции. 
+При этом  команды, состоящие из аналитиков, тестировщиков и разработчиков  должны сами определять набор иструкций , так как в процессе разработки автомобильного ПО могут выявляться свойства, специфичные для того или иного программного продукта. У пользователей должна быть позможность описать сценарии с иcпользованием специфичных терминов (рычаги у рулевой колонки, расстояние у лидара и т.д).
+Предполагается, что пользователи сами определяют ограниченный набор шагов, необходимых для описания тестовых сценариев, а тестировщиик набор шагов для каждой инструкции. 
  
-Допустим, пользователи обпределили следующий ограниченный набор команд: «Отправить запрос ‘запрос’», «Получить ответ ‘ответ’». При этом формат запроса и ответа является проектно-специфичным, а значит при описани любого шага должна быть возможность описывать кастомизированные параметры. Добиться этого можно, выделив параметр в отдельную лексему. 
+Допустим, пользователи определили следующий ограниченный набор команд: «Отправить запрос ‘запрос’», «Получить ответ ‘ответ’». При этом формат запроса и ответа является проектно-специфичным, а значит при описании любого шага должна быть возможность описывать кастомизированные параметры. Добиться этого можно, выделив параметр в отдельную лексему. 
 
-Было принято решение, что синтаксис разрабатываемого языка будет иметь аналогичные с Gherkin ключевые слова, возможность описывать сценарии на языке, привычном пользователю, будь то русский или английский. 
+Предположим, что синтаксис разрабатываемого языка будет иметь ключевые слова, по которым можно определить входные и выходные данные, возможность описывать сценарии на языке, привычном пользователю, будь то русский или английский. 
+
+В качестве входов системы рассмотрим пакеты данных, отправляемые тестируемому оборудованию, а так же  установку значений  параметров (частота передачи данных, значения отправляемых сигналов и д.р.). В этом случае входы системы можно разделить на два класса: отправка данных и настройка данных. В таком случае выходами системы будут получаемые с тестируемого оборудования пакеты данных. Данные могут приниматься единожды (UDS пакеты), или же переодически (синхросигналы). Соответственно, представляется логичным разделить их на две большие группы: получение пакетов и данные, которые необходимо проверить в определенный момент времени. В этом случае система управления имеет входы $X(Send_{data}, Set_{data})$ и выходы $Y(Recieve_{data}, Check_{data})$. На рис. \ref{blackBoxKeyWords} в качестве входных и выходных данных ``черного ящика'' представлены ключевые слова, которыми назовем четыре группы вышеописанных данных.  
+
+\begin{Figure}{Тестирование автомобильной системы в качестве ``черного ящика''}{blackBoxKeyWords}
+{\includegraphics[width=\linewidth]{res/blackBoxKeyWords}}
+\label{fig:image}
+\end{Figure} 
+
+Так как автомобильные системы тестируются в режиме реального времени, в тестовых сценариях необходимо явно оперировать временем. Ответ на запрос приходит не моментально, так же как и не моментально изменяются значения сигналов. Зачастую возникает необходимость проверить значение полученного сигнала несколько раз в определенные промежутки времени. В этом случае между  отправкой запроса и получением ответа необходимо установить паузу, в течение которой тестовое оборудование не будет выполнять проверку полученных данных на соотвествие ожидаемым данным, описанные в тестовом сценарии. Для реализации этой возможности введем ключевое слово Pause. После данного ключевого слова должно указываться значение $p_n$ такое, что $t_{n+1}=t_n+p_n$.
+
+
+ 
 Из вышеуказаного можно определить следующий набор ключевых слов с которых должен начинаться любой шаг сценария:  Send, Set, Check, Receive, Pause, Trigger, When, Repeat.
 
 В свою очередь шаги группируются в тестовые сценарии, которых в тестовой спецификации может быть несколько.
