more about lexer

--- a/main.tex
+++ b/main.tex
@@ -500,21 +500,46 @@ ANTLR4 удобен для работы с AST, является свободным программным обеспечением, пре
 
 
  
-Из вышеуказаного можно определить следующий набор ключевых слов с которых должен начинаться любой шаг сценария:  Send, Set, Check, Receive, Pause, Trigger, When, Repeat.
-
-В свою очередь шаги группируются в тестовые сценарии, которых в тестовой спецификации может быть несколько.
-
-При этом для удобства пользователя все эти лексемы языка должны быть регистронезависимы. 
+Из вышеуказаного можно определить следующий набор ключевых слов с которых должен начинаться любой шаг сценария:  Send, Set, Check, Receive, Pause.  Реализация данных лексем представлена в листинге \ref{listKeyWords}. 
+При этом для удобства пользователя ключевые слова языка должны быть регистронезависимы. 
 К сожалению, в ANTLR нет поддержки регистронезависимых токенов, и для токенов приходится использовать следующую запись с использованием фрагментных токенов, которые используются для построения реальных токенов: 
 
 fragment S: [sS];
+ 
+ \lstinputlisting[caption=Ключевые слова, language=java,  firstline=22,  lastline=36 ]{res/BddLexer.g4}{listKeyWords}
+ 
+ После шага должна идти инструкция, определяемая пользователем языка. Например, если необходимо проверить функцию записи определенных данных в энергонезависимой памяти, нужно реализовать следующий набор шагов тестового сценария: 
 
+\begin{itemize}
+\itemВключить тестовое оборудование
+\itemС помощью сервиса UDS протокола WriteDataByIdentifier (0x2E) записать корректные данные
+\itemС помощью сервиса UDS протокола ReadDataByIdentifier (0x22) проверить, что данные успешно записаны
+\itemВыключить тестируемое оборудование
+\itemВключить тестируемое оборудование
+\itemС помощью сервиса UDS протокола ReadDataByIdentifier (0x22) прочитать записанные данные
+\itemВыключить тестируемое оборудование
+\end{itemize}
 
-\lstinputlisting[caption=Ключевые слова, language=java,  firstline=22,  lastline=36 ]{res/BddLexer.g4}
+Предположим, что для области памяти с адресом 0xF101 корректными данными являются три байта 0x0001A5. 
+В этом случае, в соответствии с принципами BDD набор тестовых инструкций, определяемых пользователем могут выглядеть следующим образом: 
+
+\textbf{Set} ignition on, 
+\textbf{Send} request [22 F1 01 00 01 A5],  
+\textbf{Recieve} response [62 F1 01], 
+\textbf{Set} ignition off, 
+\textbf{Set} ignition on, 
+\textbf{Send} request [2E F1 01], 
+\textbf{Pause} 100 ms, 
+\textbf{Recieve} response [6E F1 01 00 01 A5], 
+\textbf{Set} ignition off.
+
+Такая запись не очень удобна с точки зрения восприимчивости теста. Поэтому разумно ввести правило, что каждое правило должно начинаться с новой строки. Для обозначения новой строки введем лексему \textbf{NewLine}. Подробнее правила синтаксического анализа будут рассмотрены в разделе \ref{lParser}. Более того, нет обозначения начала тестового сценария. Так же в тестовой спецификации должна быть краткая информация для каждого сценария, чтобы можно было быстро понять зачем нужно данное испытание.  Для этого введем ключевое слово \textbf{TestCase}, обозначающее начало сценария, после которого должна идти краткая информация. 
+Шаги группируются в тестовые сценарии, которых в тестовой спецификации может быть несколько.
+
 
 
 %---------------------------------ПАРСЕР
-\section{Парсер}
+\section{Парсер}\label{lParser}
 
 Для описания синтаксической структуры языка нужно определить порядок записи:
 \begin{itemize}
