a little bit about vectorBox

--- a/main.tex
+++ b/main.tex
@@ -298,7 +298,32 @@ Cucumber – это фреймворк, реализующий подход BDD. В Cucumber для разработки тест
  
 Тестирование автомобильных систем предполагает, что поведение электрических блоков управления транспортного средства должно соответствовать стандарту UDS ISO 14229.
  
-Принимая АС в качестве черного ящика их можно исследовать, манипулируя входными данными и данными, полученными на выходе. В этом случае под данными понимаются пакеты автомобильной сети, передающиеся на сетевом уровне модели OSI через стандартные шинные архитектуры CAN, FlexRay, LIN и Ethernet. 
+Принимая АС в качестве черного ящика их можно исследовать, манипулируя входными данными и  обрабатывая данные, полученные на выходе. В этом случае под данными понимаются кадры автомобильной сети, передающиеся на сетевом уровне модели OSI через стандартные протоколы (CAN, FlexRay, LIN и Ethernet). 
+
+Под тестируемым оборудованием автомобильной системы подразумевается электрический блок управления (ECU), представляющий собой набор плат. Для того, чтобы управлять данным блоком, необходимо наладить канал взаимодействия с ним. Для этого, ввиду отсутвия у платы интерфейсных выходов, используется внешний интерфейсный блок. В качестве интрефейсного блока выступает аппаратное обеспечение, разработанное компанией Vector, называемое VectorBox. Данный блок представляет собой набор интерфейсов для взаимодействия по одному или нескольким протоколам. За реализацию данных протоколов отвечает встроенное программно-аппаратное обеспечение данного устройства. Схема подключения тестируемого оборудования к персональному компьютеру представлена на рис. \ref{fConnectionScheme}.
+
+
+\begin{Figure}[h!]{Схема подключения тестируемого оборудования к PC}{fConnectionScheme}
+{\includegraphics[width=\linewidth]{res/ConnectionScheme}}
+\label{fig:image}
+\end{Figure}
+
+%\subsection{Алгоритм тестирования}
+ 
+Алгоритм тестирования ECU можно описать следующим образом: 
+\begin{enumerate}
+\itemиз тестовой инструкции извлекаются данные, необходимые для отправки на ECU;
+\itemданные преобразуются в кадры управления VectorBox'ом;
+\itemинтерфейсный блок управления (VectorBox) генерирует управляющие сигналы и отправляет их на ECU;
+\itemпосле выполнения полученной инструкции ECU генерирует ответ, который отправляется на VectorBox;
+\itemпосле получения ответа от ECU VectorBox генерирует кадр и передает через интерфейс пользовательскому компьютеру (PC);
+\itemполученный кадр ответа транслирующая система сравнивает с ожидаемым значением, описанным в тестовой спецификации;
+\end{enumerate}
+
+
+
+
+
 
 Поведенческое тестирование автомобильных систем может быть выполнено следующими способами:
 \begin{itemize}
