FlexRay + listing refs

--- a/main.tex
+++ b/main.tex
@@ -293,6 +293,7 @@ Cucumber – это фреймворк, реализующий подход BDD. В Cucumber для разработки тест
 %-----------------------------ТЕСТИРОВАНИЕ АВТОМОБИЛЬНЫХ СИСТЕМ
 \section{Тестирование автомобильных систем}
 
+
 Прежде чем начать разрабатывать язык для описания сценариев тестирования автомобильных систем рассмотрим основные стандарты, используемые в транспортной промышленности. 
 
  
@@ -300,6 +301,7 @@ Cucumber – это фреймворк, реализующий подход BDD. В Cucumber для разработки тест
  
 Принимая АС в качестве черного ящика их можно исследовать, манипулируя входными данными и  обрабатывая данные, полученные на выходе. В этом случае под данными понимаются кадры автомобильной сети, передающиеся на сетевом уровне модели OSI через стандартные протоколы (CAN, FlexRay, LIN и Ethernet). 
 
+\subsection{Аппаратная платформа проведения исследования}
 Под тестируемым оборудованием автомобильной системы подразумевается электрический блок управления (ECU), представляющий собой набор плат. Для того, чтобы управлять данным блоком, необходимо наладить канал взаимодействия с ним. Для этого, ввиду отсутвия у платы интерфейсных выходов, используется внешний интерфейсный блок. В качестве интрефейсного блока выступает аппаратное обеспечение, разработанное компанией Vector, называемое VectorBox. Данный блок представляет собой набор интерфейсов для взаимодействия по одному или нескольким протоколам. За реализацию данных протоколов отвечает встроенное программно-аппаратное обеспечение данного устройства. Схема подключения тестируемого оборудования к персональному компьютеру представлена на рис. \ref{fConnectionScheme}.
 
 
@@ -308,7 +310,26 @@ Cucumber – это фреймворк, реализующий подход BDD. В Cucumber для разработки тест
 \label{fig:image}
 \end{Figure}
 
-%\subsection{Алгоритм тестирования}
+\subsection{Описание протоколов передачи данных}
+
+\subsubsection{Ethernet}
+\subsubsection{LIN}
+\subsubsection{CAN}
+
+
+\subsubsection{FlexRay}
+В 2004 году компания NXP совместно с BMW, Diamler, Bosh, GM и Volkswagen представила новый сетевой протокол для автомобилей. Этот высокоскоростной сетевой протокол обладает пропусткной способностью до 10 Мбит/с. Данная шина работает в цикле из двух сегментов: статического и динамического. Статический сегмент разделен на участки для отдельных типов обменов, предоставляя гарантии реального времени. Динамический сегмент в свою очередь работает по принципу, схожему с шиной CAN, где в данном случае контроль над шиной может быть получен участниками топологии в любой момент времени. 
+
+Кадр данного протокола, представленый на рисунке \ref{fFlexRay}, разделен на три сегмента. Заголовочный сегмент состоит из полей постоянной длины. Первые пять бит отводятся под управляющие сигналы, к которым относятся: специально зарезервированный бит, бит указателя преамбулы, индикатор нулевого кадра, бит синхронизации, бит начала кадра. Следующие 11 бит представляют собой поле, хранящее идентификационный номер кадра. Длина полезной информации, которую несет в себе кадр, содержится в следующих 7 битах. На основе этих двух полей производится вычисление контрольной суммы заголовочного сегмента, которая хранится в следующих 7 битах.  Последние 6 бит заголовочного сегмента являются счетчиком. Таким образом длина заголовочного сегмента равна 5 байтам.  
+ 
+\begin{Figure}[h!]{Кадр протокола FlexRay}{fFlexRay}
+{\includegraphics[width=\linewidth]{res/FlexRay}}
+\label{fig:image}
+\end{Figure}
+
+Следом за заголовком идет сегмент полезных данных, который сотоит из $n$ полей. Длина каждого из полей равняется 1 байту. Количество полей регулируется в заголовке. Замыкающим сегментом является трехбайтная контрольная сумма, которая высчитывется на основе всего кадра.
+
+
  
 Алгоритм тестирования ECU можно описать следующим образом: 
 \begin{enumerate}
@@ -319,10 +340,6 @@ Cucumber – это фреймворк, реализующий подход BDD. В Cucumber для разработки тест
 \itemпосле получения ответа от ECU VectorBox генерирует кадр и передает через интерфейс пользовательскому компьютеру (PC);
 \itemполученный кадр ответа транслирующая система сравнивает с ожидаемым значением, описанным в тестовой спецификации;
 \end{enumerate}
-
-
-
-
 
 
 Поведенческое тестирование автомобильных систем может быть выполнено следующими способами:
@@ -342,10 +359,6 @@ Cucumber – это фреймворк, реализующий подход BDD. В Cucumber для разработки тест
 Данный способ тестирования подразумевает валидацию требований, предоставленных аналитиками и инженерами, которые составляют требования. Например, если в требовании описано, что сеть должна переходить в активный режим при получении любого кадра, то в качестве входных данных формируется любой корректный в данной сети кадр.
 \end{itemize}
 
-
-\subsection {Симуляция работы сетей}
-
-рассказать о шине CAN в промышленной автоматизации, eternet, fleaxray? немного о их пакетах и что нужно для тестирования? 
 
 
 Основываясь на вышесказанном разрабатываемый язык должен предоставлять пользователям возможность получения передачи данных на сетевом уровне модели ISO по протоколам CAN, FlexRay, LIN и Ethernet.
@@ -604,8 +617,8 @@ BddParserVisitor.java, BddParserListener.java, BddParserBaseListener   — это инт
 \section{Использование грамматики}
 
 Для использования разработанного парсера ANTLR4 представляет возможность сгенерировать два паттерна проектирования: Visitor (посеттель) и Listener(слушатель). Каждый из них предполагает анализ определенного подмножества узлов дерева разбора. Узлы дерева разбора, не являющиеся листьями, соответствуют каким-либо синтаксическим правилам грамматики. При анализе узлов дерева разбора нужно обращаться к дочерним узлам, соответствующим фрагментам исходного правила. Причем обращаться можно как к отдельным узлам, так и к группам узлов. Следовательно важным условием создания хорошей грамматики является возможность интуитивно простой доступ к любой части правила. ANTLR4 предоставляет такие сущности как альтернативные и элементарные метки. Альтернативные метки позволяют разбить сложное правило на альтернативные фразы и обрабатывать каждую фразу отдельно.  
-В нашем случае правило инструкции можно разбить на следующие альтервативные метки:  
-\lstinputlisting[caption= альтервативные метки синтаксического правила instruction,language=java,  firstline=11, 	 lastline=16 ]{res/BddParser.g4}
+В нашем случае правило инструкции можно разбить на альтернативные метки, представленные на листинге \ref{lst:BddParser}
+\lstinputlisting[caption= альтернативные метки синтаксического правила instruction,language=java,  firstline=11, 	 lastline=16 , label={lst:BddParser}]{res/BddParser.g4}
 
 
 Элементными метками помечаются отдельные нетерминалы или последовательности терминалов. Они предоставляют доступ к содержимому контекста правила в виде поля с заданным именем. Таким образом, вместо вычисления (извлечения) отдельного элемента содержимого некоторого контекста достаточно просто обратиться к такой элементной метке.
@@ -614,7 +627,7 @@ BddParserVisitor.java, BddParserListener.java, BddParserBaseListener   — это инт
 
 При завершении обхода AST инструкции поочередно выполняются в том порядке, в котором были заданы в тестовой спецификации. 
 
-\lstinputlisting[caption=Пример реализации пользовательской инструкции с аннотацией Send,language=java]{res/annotatoinExample.txt}
+\lstinputlisting[caption=Пример реализации пользовательской инструкции с аннотацией Send,language=java, label={lst:annotatoinExample1}]{res/annotatoinExample.txt}
 
 Для реализации функционала симуляции автомобильных сетей используется XL-Driver-Library. XL-Driver-Library -- это универсальный программный интерфейс, позволяющий получить доступ к интерфейсам апаратных средств Vector. Он поддерживает следующие шины: 
 \begin{itemize}
@@ -689,19 +702,19 @@ Java Native Interface (JNI) — стандартный механизм для запуска кода, под управле
 \end{itemize}
 Для обработки ошибок используется класс ThrowingErrorListener, наследуемый от BaseErrorListener. BaseErrorListener предоставляет пустую имплементацию интерфейса  ANTLRErrorListener. Реализация каждого метода по умолчанию ничего не делает, но может быть переписана в наследнике по мере необходимости. Для обработки синтаксических ошибок используется метод 	syntaxError, уведомляющий в какой строке и в на какой позиции в строке возникла ошибка и ее причину. 
 
-Ниже представлен пример тестового сценария с синтаксической ошибкой: на 9 строке после ключевого слова не указана текстовая инструкция. В этом случае ThrowingErrorListener должен сообщить о синтаксической ошибке (листинг 3.4)
-\lstinputlisting[caption=Пример тестового сценария с синтаксической ошибкой, language=java,  firstline=1,  lastline=10 ]{res/ErrorExample.txt}
+На листинге \ref{lst:ErrorExample1} представлен пример тестового сценария с синтаксической ошибкой: на 9 строке после ключевого слова не указана текстовая инструкция. В этом случае ThrowingErrorListener должен сообщить о синтаксической ошибке (листинг \ref{lst:ErrorExampleRes1}).
+\lstinputlisting[caption=Пример тестового сценария с синтаксической ошибкой, language=java,  firstline=1,  lastline=10 , label={lst:ErrorExample1}]{res/ErrorExample.txt}
 
 
-\lstinputlisting[caption=Результат работы интерпретатора для тестового сценария с синтаксической ошибкой, language=java,  firstline=13,  lastline=14]{res/ErrorExample.txt}
+\lstinputlisting[caption=Результат работы интерпретатора для тестового сценария с синтаксической ошибкой, language=java,  firstline=13,  lastline=14 , label={lst:ErrorExampleRes1}]{res/ErrorExample.txt}
 
 
-В случае, если на вход подается тестовая спецификация, в окторой указана инструкция, не объявленая в пользовательской библиотеке команд, возникает исключение UndefinedInstructionException, сообщающее какая именно инструкция была неопределена.
+В случае, если на вход подается тестовая спецификация, в которой указана инструкция, не объявленая в пользовательской библиотеке команд (листинг \ref{lst:ErrorExample2}), возникает исключение UndefinedInstructionException, сообщающее какая именно инструкция была неопределена (листинг \ref{lst:ErrorExampleRes2}).
 
-\lstinputlisting[caption=Пример тестового сценария необъявленной инструкцией, language=java,  firstline=18,  lastline=20 ]{res/ErrorExample.txt}
+\lstinputlisting[caption=Пример тестового сценария необъявленной инструкцией, language=java,  firstline=18,  lastline=20, , label={lst:ErrorExampleInput2} ]{res/ErrorExample.txt}
 
 
-\lstinputlisting[caption=Результат работы интерпретатора для тестового сценария с необъявленной инструкцией, language=java,  firstline=22,  lastline=23]{res/ErrorExample.txt}
+\lstinputlisting[caption=Результат работы интерпретатора для тестового сценария с необъявленной инструкцией, language=java,  firstline=22,  lastline=23, label={lst:ErrorExampleRes2}]{res/ErrorExample.txt}
 
 
 
@@ -718,11 +731,13 @@ Java Native Interface (JNI) — стандартный механизм для запуска кода, под управле
 %Проверка адекватности модели, сравнение с существующими аналогами, выбор 
 %представительного множества тестов, анализ результатов испытаний.
 
-Для тестирования реализованного языка были разработа Unit тесты. Модульное тестирование, оно же юнит-тестирование, позволяет проверить корректность отдельных модулей исходного кода программы. 
+Для тестирования реализованного языка были разработа Unit тесты. Модульное тестирование, оно же юнит-тестирование, позволяет проверить корректность отдельных модулей исходного кода программы.
 
-\lstinputlisting[caption=входные данные для теста testTwoInstructionsInTheSameLine, language=java,  firstline=2,  lastline=9 ]{res/testTwoInstructionsInTheSameLine.txt}
+% \ref{lst:label}
 
-\lstinputlisting[caption=входные данные для теста testSetEmptyInstruction, language=java,  firstline=13,  lastline=22 ]{res/testTwoInstructionsInTheSameLine.txt}
+\lstinputlisting[caption=входные данные для теста testTwoInstructionsInTheSameLine, language=java,  firstline=2,  lastline=9 , label={lst:testTwoInstructionsInTheSameLine}]{res/testTwoInstructionsInTheSameLine.txt}
+
+\lstinputlisting[caption=входные данные для теста testSetEmptyInstruction, language=java,  firstline=13,  lastline=22, label={lst:testTwoInstructionsInTheSameLine} ]{res/testTwoInstructionsInTheSameLine.txt}
 
 
 Ниже представлена спецификация для разработанного синтаксического анализатора и результаты выполнения тестов
