--- a/main.tex
+++ b/main.tex
@@ -341,7 +341,7 @@ Cucumber – это фреймворк, реализующий подход BDD. В Cucumber для разработки тест
 \itemполученный кадр ответа транслирующая система сравнивает с ожидаемым значением, описанным в тестовой спецификации;
 \end{enumerate}
 
-
+\subsection {Сценарии тестирования}
 Поведенческое тестирование автомобильных систем может быть выполнено следующими способами:
 \begin{itemize}
 \itemРазделение на классы эквивалентности 
@@ -508,12 +508,12 @@ S – начальный символ грамматики.
 ANTLR4 удобен для работы с AST, является свободным программным обеспечением, предоставляет сообщение об ошибках и восставновление после них, а так же предоставляет плагины для Eclipse и IntelliJ IDEA, что позволяет удобно создавать и отлаживать грамматики. Интерпретатор реализован на языке java.
 
 %-------------------------------------ЛЕКСЕР
-\section{Лексер}
+\section{Лексический анализатор}
 Предметно-ориентированный язык для описания тестовых сценариев автомобильных систем должен  должен позволять описывать следующие виды инструкций, необходимых для описания входных и выходных данных:
 \begin{itemize}
 \itemОтправить фрейм, сигнал или набор данных по UDS протоколу на тестируемое ПО
 \itemПолучить фрейм, сигнал или набор данных по UDS протоколу от тестируемого ПО
-\itemСделать паузу между инструкиями, чтобы тестируемое ПО успело сформировать и отправить необходимый пакет
+\itemВыполнить паузу между инструкциями, чтобы тестируемое ПО успело сформировать и отправить необходимые данные
 \itemВыполнять шаги определенное количество раз, т.к. многие системы имеют алгоритмы со счетчики, которые можно выполнить определенное количесво раз. Зачастую значения таких счетчиков измеряются сотнями и даже тысячами шагов. При удачной группировке этих шагов количество строк тестового сценария можно сократить в десятки раз, поместив из в цикл.
 \itemВыполнять определенные действия по событию (триггер).
 \itemУстановить значение отправляемого сигнала
@@ -538,13 +538,13 @@ ANTLR4 удобен для работы с AST, является свободным программным обеспечением, пре
 
 
  
-Из вышеуказаного можно определить следующий набор ключевых слов с которых должен начинаться любой шаг сценария:  Send, Set, Check, Receive, Pause.  Реализация данных лексем представлена в листинге \ref{listKeyWords}. 
+Из вышеуказаного можно определить следующий набор ключевых слов с которых должен начинаться любой шаг сценария:  \textbf{Send}, \textbf{Set}, \textbf{Check}, \textbf{Receive}, \textbf{Pause}.  Реализация данных лексем представлена в листинге \ref{lst:listKeyWords}. 
 При этом для удобства пользователя ключевые слова языка должны быть регистронезависимы. 
 К сожалению, в ANTLR нет поддержки регистронезависимых токенов, и для токенов приходится использовать следующую запись с использованием фрагментных токенов, которые используются для построения реальных токенов: 
 
 fragment S: [sS];
  
- \lstinputlisting[caption=Ключевые слова, language=java,  firstline=22,  lastline=36 ]{res/BddLexer.g4}{listKeyWords}
+ \lstinputlisting[caption=Ключевые слова, language=java,  firstline=22,  lastline=36 , label = {lst:listKeyWords}]{res/BddLexer.g4}
  
  После шага должна идти инструкция, определяемая пользователем языка. Например, если необходимо проверить функцию записи определенных данных в энергонезависимой памяти, нужно реализовать следующий набор шагов тестового сценария: 
 
@@ -577,7 +577,7 @@ fragment S: [sS];
 
 
 %---------------------------------ПАРСЕР
-\section{Парсер}\label{lParser}
+\section{Синтаксический анализатор}\label{lParser}
 
 Для описания синтаксической структуры языка нужно определить порядок записи:
 \begin{itemize}
@@ -614,7 +614,7 @@ BddParserVisitor.java, BddParserListener.java, BddParserBaseListener   — это инт
 
   
 %-------------------------------Использование грамматики
-\section{Использование грамматики}
+\section{Интерпретатор}
 
 Для использования разработанного парсера ANTLR4 представляет возможность сгенерировать два паттерна проектирования: Visitor (посеттель) и Listener(слушатель). Каждый из них предполагает анализ определенного подмножества узлов дерева разбора. Узлы дерева разбора, не являющиеся листьями, соответствуют каким-либо синтаксическим правилам грамматики. При анализе узлов дерева разбора нужно обращаться к дочерним узлам, соответствующим фрагментам исходного правила. Причем обращаться можно как к отдельным узлам, так и к группам узлов. Следовательно важным условием создания хорошей грамматики является возможность интуитивно простой доступ к любой части правила. ANTLR4 предоставляет такие сущности как альтернативные и элементарные метки. Альтернативные метки позволяют разбить сложное правило на альтернативные фразы и обрабатывать каждую фразу отдельно.  
 В нашем случае правило инструкции можно разбить на альтернативные метки, представленные на листинге \ref{lst:BddParser}
